# entryman

./: .gitignore  Cargo.toml  README.md  default.nix  entman.toml.example  shell.nix
.github/workflows/: rust.yml
src/: client.rs  main.rs  server.rs  util.rs
src/history/: json_history.rs  mod.rs
src/identity/: json.rs  ldap.rs  mod.rs
