[package]
name = "entman"
version = "0.1.0"
authors = ["haslersn <sebastian.hasler@gmx.net>"]
edition = "2018"

[dependencies]
async-trait = "0.1"
env_logger = "0.9"
ldap3 = "0.10"
log = "0.4"
reqwest = "0.11"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.5"
tokio = { version = "1.17.0" }

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["json"]

[features]

# If compiling on a system without OpenSSL installed, or cross-compiling for a different
# architecture, enable this feature to compile OpenSSL as part of the build.
# See https://docs.rs/openssl/#vendored for more.
static_ssl = ['openssl/vendored']
